fix arrow animation jumping

--- a/src/styles/generic/_animations.css
+++ b/src/styles/generic/_animations.css
@@ -1,3 +1,3 @@
-* {
-  transition: all 0.08s ease;
+*:not([class^="v-popper"]) {
+  transition: all 0.5s ease;
 }
